parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> phpSyntax
Rule 1     phpSyntax -> inicio codigo fin
Rule 2     phpSyntax -> inicio fin
Rule 3     codigo -> algoritmo
Rule 4     codigo -> algoritmo codigo
Rule 5     codigo -> 
Rule 6     inicio -> INICIO
Rule 7     fin -> FIN
Rule 8     algoritmo -> asignacion
Rule 9     algoritmo -> declaracion
Rule 10    algoritmo -> comparacion
Rule 11    algoritmo -> condicionalIF
Rule 12    algoritmo -> iteracionFOR
Rule 13    algoritmo -> bucleWHILE
Rule 14    algoritmo -> bucleDO_WHILE
Rule 15    algoritmo -> indexacion
Rule 16    algoritmo -> echo
Rule 17    algoritmo -> terminar
Rule 18    asignacion -> ambito multiVariable IGUAL expresion PTOCO
Rule 19    asignacion -> multiVariable IGUAL expresion PTOCO
Rule 20    declaracion -> ambito multiVariable PTOCO
Rule 21    declaracion -> multiVariable PTOCO
Rule 22    multiVariable -> VARIABLE
Rule 23    multiVariable -> VARIABLE COMA multiVariable
Rule 24    ambito -> STATIC
Rule 25    ambito -> VAR
Rule 26    ambito -> GLOBAL
Rule 27    ambito -> CONST
Rule 28    comparacion -> valor operadorC expresion PTOCO
Rule 29    comparacion -> valor operadorM expresion PTOCO
Rule 30    comparacion -> valor operadorL expresion PTOCO
Rule 31    expresion -> valor
Rule 32    expresion -> expresion_aritmetica
Rule 33    expresion -> expresion_logica
Rule 34    expresion -> expresion_comparativa
Rule 35    expresion_aritmetica -> valor operadorM expresion
Rule 36    expresion_logica -> valor operadorL expresion
Rule 37    expresion_logica -> booleano
Rule 38    expresion_comparativa -> valor operadorC expresion
Rule 39    condicion -> expresion_logica
Rule 40    condicion -> expresion_comparativa
Rule 41    operadorM -> MAS
Rule 42    operadorM -> RESTA
Rule 43    operadorM -> PROD
Rule 44    operadorM -> DIV
Rule 45    operadorM -> MOD
Rule 46    operadorM -> POTENCIA
Rule 47    operadorC -> MAYOR
Rule 48    operadorC -> MENOR
Rule 49    operadorC -> COMPARACION
Rule 50    operadorC -> IDENTICO
Rule 51    operadorC -> DIFERENTE
Rule 52    operadorC -> NOIDENTICO
Rule 53    operadorC -> MENOROIGUAL
Rule 54    operadorC -> MAYOROIGUAL
Rule 55    operadorC -> NAVEESPACIAL
Rule 56    terminar -> BREAK PTOCO
Rule 57    operadorL -> AND
Rule 58    operadorL -> XOR
Rule 59    operadorL -> OR
Rule 60    operadorL -> NOT
Rule 61    valor -> INTEGER
Rule 62    valor -> booleano
Rule 63    valor -> STRING
Rule 64    valor -> FLOAT
Rule 65    valor -> VARIABLE
Rule 66    valor -> BOOLEAN
Rule 67    booleano -> TRUE
Rule 68    booleano -> FALSE
Rule 69    adicion -> MAS MAS VARIABLE
Rule 70    adicion -> MENOS MENOS VARIABLE
Rule 71    adicion -> VARIABLE MAS MAS
Rule 72    adicion -> VARIABLE MENOS MENOS
Rule 73    condicionalIF -> IF PIZQ condicion PDER LIZQ codigo LDER
Rule 74    condicionalIF -> IF PIZQ condicion PDER LIZQ codigo LDER condicionalELSE
Rule 75    condicionalIF -> IF PIZQ condicion PDER codigo
Rule 76    condicionalIF -> IF PIZQ condicion PDER codigo condicionalELSE
Rule 77    condicionalELSE -> ELSE LIZQ codigo LDER
Rule 78    condicionalELSE -> ELSEIF PIZQ condicion PDER LIZQ codigo LDER condicionalELSE
Rule 79    condicionalELSE -> ELSE codigo
Rule 80    condicionalELSE -> ELSEIF PIZQ condicion PDER codigo condicionalELSE
Rule 81    iteracionFOR -> FOR PIZQ asignacion condicion PTOCO adicion PDER codigo
Rule 82    iteracionFOR -> FOR PIZQ asignacion condicion PTOCO adicion PDER LIZQ codigo LDER
Rule 83    bucleWHILE -> WHILE PIZQ condicion PDER codigo
Rule 84    bucleWHILE -> WHILE PIZQ condicion PDER LIZQ codigo LDER
Rule 85    bucleDO_WHILE -> DO LIZQ codigo LDER WHILE PIZQ condicion PDER codigo
Rule 86    bucleDO_WHILE -> DO LIZQ codigo LDER WHILE PIZQ condicion PDER LIZQ codigo LDER
Rule 87    indexacion -> VARIABLE CIZQ INTEGER CDER
Rule 88    indexacion -> VARIABLE CIZQ RESTA INTEGER CDER
Rule 89    indexacion -> VARIABLE CIZQ INTEGER CDER FUSIONNULL
Rule 90    indexacion -> VARIABLE CIZQ RESTA INTEGER CDER FUSIONNULL
Rule 91    echo -> ECHO VARIABLE PTOCO
Rule 92    echo -> ECHO expresion PTOCO

Terminals, with rules where they appear

                     : 5
AND                  : 57
BOOLEAN              : 66
BREAK                : 56
CDER                 : 87 88 89 90
CIZQ                 : 87 88 89 90
COMA                 : 23
COMPARACION          : 49
CONST                : 27
DIFERENTE            : 51
DIV                  : 44
DO                   : 85 86
ECHO                 : 91 92
ELSE                 : 77 79
ELSEIF               : 78 80
FALSE                : 68
FIN                  : 7
FLOAT                : 64
FOR                  : 81 82
FUSIONNULL           : 89 90
GLOBAL               : 26
IDENTICO             : 50
IF                   : 73 74 75 76
IGUAL                : 18 19
INICIO               : 6
INTEGER              : 61 87 88 89 90
LDER                 : 73 74 77 78 82 84 85 86 86
LIZQ                 : 73 74 77 78 82 84 85 86 86
MAS                  : 41 69 69 71 71
MAYOR                : 47
MAYOROIGUAL          : 54
MENOR                : 48
MENOROIGUAL          : 53
MENOS                : 70 70 72 72
MOD                  : 45
NAVEESPACIAL         : 55
NOIDENTICO           : 52
NOT                  : 60
OR                   : 59
PDER                 : 73 74 75 76 78 80 81 82 83 84 85 86
PIZQ                 : 73 74 75 76 78 80 81 82 83 84 85 86
POTENCIA             : 46
PROD                 : 43
PTOCO                : 18 19 20 21 28 29 30 56 81 82 91 92
RESTA                : 42 88 90
STATIC               : 24
STRING               : 63
TRUE                 : 67
VAR                  : 25
VARIABLE             : 22 23 65 69 70 71 72 87 88 89 90 91
WHILE                : 83 84 85 86
XOR                  : 58
error                : 

Nonterminals, with rules where they appear

adicion              : 81 82
algoritmo            : 3 4
ambito               : 18 20
asignacion           : 8 81 82
booleano             : 37 62
bucleDO_WHILE        : 14
bucleWHILE           : 13
codigo               : 1 4 73 74 75 76 77 78 79 80 81 82 83 84 85 85 86 86
comparacion          : 10
condicion            : 73 74 75 76 78 80 81 82 83 84 85 86
condicionalELSE      : 74 76 78 80
condicionalIF        : 11
declaracion          : 9
echo                 : 16
expresion            : 18 19 28 29 30 35 36 38 92
expresion_aritmetica : 32
expresion_comparativa : 34 40
expresion_logica     : 33 39
fin                  : 1 2
indexacion           : 15
inicio               : 1 2
iteracionFOR         : 12
multiVariable        : 18 19 20 21 23
operadorC            : 28 38
operadorL            : 30 36
operadorM            : 29 35
phpSyntax            : 0
terminar             : 17
valor                : 28 29 30 31 35 36 38

Parsing method: LALR

state 0

    (0) S' -> . phpSyntax
    (1) phpSyntax -> . inicio codigo fin
    (2) phpSyntax -> . inicio fin
    (6) inicio -> . INICIO

    INICIO          shift and go to state 3

    phpSyntax                      shift and go to state 1
    inicio                         shift and go to state 2

state 1

    (0) S' -> phpSyntax .



state 2

    (1) phpSyntax -> inicio . codigo fin
    (2) phpSyntax -> inicio . fin
    (3) codigo -> . algoritmo
    (4) codigo -> . algoritmo codigo
    (5) codigo -> . 
    (7) fin -> . FIN
    (8) algoritmo -> . asignacion
    (9) algoritmo -> . declaracion
    (10) algoritmo -> . comparacion
    (11) algoritmo -> . condicionalIF
    (12) algoritmo -> . iteracionFOR
    (13) algoritmo -> . bucleWHILE
    (14) algoritmo -> . bucleDO_WHILE
    (15) algoritmo -> . indexacion
    (16) algoritmo -> . echo
    (17) algoritmo -> . terminar
    (18) asignacion -> . ambito multiVariable IGUAL expresion PTOCO
    (19) asignacion -> . multiVariable IGUAL expresion PTOCO
    (20) declaracion -> . ambito multiVariable PTOCO
    (21) declaracion -> . multiVariable PTOCO
    (28) comparacion -> . valor operadorC expresion PTOCO
    (29) comparacion -> . valor operadorM expresion PTOCO
    (30) comparacion -> . valor operadorL expresion PTOCO
    (73) condicionalIF -> . IF PIZQ condicion PDER LIZQ codigo LDER
    (74) condicionalIF -> . IF PIZQ condicion PDER LIZQ codigo LDER condicionalELSE
    (75) condicionalIF -> . IF PIZQ condicion PDER codigo
    (76) condicionalIF -> . IF PIZQ condicion PDER codigo condicionalELSE
    (81) iteracionFOR -> . FOR PIZQ asignacion condicion PTOCO adicion PDER codigo
    (82) iteracionFOR -> . FOR PIZQ asignacion condicion PTOCO adicion PDER LIZQ codigo LDER
    (83) bucleWHILE -> . WHILE PIZQ condicion PDER codigo
    (84) bucleWHILE -> . WHILE PIZQ condicion PDER LIZQ codigo LDER
    (85) bucleDO_WHILE -> . DO LIZQ codigo LDER WHILE PIZQ condicion PDER codigo
    (86) bucleDO_WHILE -> . DO LIZQ codigo LDER WHILE PIZQ condicion PDER LIZQ codigo LDER
    (87) indexacion -> . VARIABLE CIZQ INTEGER CDER
    (88) indexacion -> . VARIABLE CIZQ RESTA INTEGER CDER
    (89) indexacion -> . VARIABLE CIZQ INTEGER CDER FUSIONNULL
    (90) indexacion -> . VARIABLE CIZQ RESTA INTEGER CDER FUSIONNULL
    (91) echo -> . ECHO VARIABLE PTOCO
    (92) echo -> . ECHO expresion PTOCO
    (56) terminar -> . BREAK PTOCO
    (24) ambito -> . STATIC
    (25) ambito -> . VAR
    (26) ambito -> . GLOBAL
    (27) ambito -> . CONST
    (22) multiVariable -> . VARIABLE
    (23) multiVariable -> . VARIABLE COMA multiVariable
    (61) valor -> . INTEGER
    (62) valor -> . booleano
    (63) valor -> . STRING
    (64) valor -> . FLOAT
    (65) valor -> . VARIABLE
    (66) valor -> . BOOLEAN
    (67) booleano -> . TRUE
    (68) booleano -> . FALSE

                    shift and go to state 7
    FIN             shift and go to state 8
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    DO              shift and go to state 25
    VARIABLE        shift and go to state 26
    ECHO            shift and go to state 28
    BREAK           shift and go to state 29
    STATIC          shift and go to state 30
    VAR             shift and go to state 31
    GLOBAL          shift and go to state 32
    CONST           shift and go to state 33
    INTEGER         shift and go to state 27
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    BOOLEAN         shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

    codigo                         shift and go to state 4
    fin                            shift and go to state 5
    algoritmo                      shift and go to state 6
    asignacion                     shift and go to state 9
    declaracion                    shift and go to state 10
    comparacion                    shift and go to state 11
    condicionalIF                  shift and go to state 12
    iteracionFOR                   shift and go to state 13
    bucleWHILE                     shift and go to state 14
    bucleDO_WHILE                  shift and go to state 15
    indexacion                     shift and go to state 16
    echo                           shift and go to state 17
    terminar                       shift and go to state 18
    ambito                         shift and go to state 19
    multiVariable                  shift and go to state 20
    valor                          shift and go to state 21
    booleano                       shift and go to state 34

state 3

    (6) inicio -> INICIO .

                    reduce using rule 6 (inicio -> INICIO .)
    FIN             reduce using rule 6 (inicio -> INICIO .)
    IF              reduce using rule 6 (inicio -> INICIO .)
    FOR             reduce using rule 6 (inicio -> INICIO .)
    WHILE           reduce using rule 6 (inicio -> INICIO .)
    DO              reduce using rule 6 (inicio -> INICIO .)
    VARIABLE        reduce using rule 6 (inicio -> INICIO .)
    ECHO            reduce using rule 6 (inicio -> INICIO .)
    BREAK           reduce using rule 6 (inicio -> INICIO .)
    STATIC          reduce using rule 6 (inicio -> INICIO .)
    VAR             reduce using rule 6 (inicio -> INICIO .)
    GLOBAL          reduce using rule 6 (inicio -> INICIO .)
    CONST           reduce using rule 6 (inicio -> INICIO .)
    INTEGER         reduce using rule 6 (inicio -> INICIO .)
    STRING          reduce using rule 6 (inicio -> INICIO .)
    FLOAT           reduce using rule 6 (inicio -> INICIO .)
    BOOLEAN         reduce using rule 6 (inicio -> INICIO .)
    TRUE            reduce using rule 6 (inicio -> INICIO .)
    FALSE           reduce using rule 6 (inicio -> INICIO .)


state 4

    (1) phpSyntax -> inicio codigo . fin
    (7) fin -> . FIN

    FIN             shift and go to state 8

    fin                            shift and go to state 40

state 5

    (2) phpSyntax -> inicio fin .

    $end            reduce using rule 2 (phpSyntax -> inicio fin .)


state 6

    (3) codigo -> algoritmo .
    (4) codigo -> algoritmo . codigo
    (3) codigo -> . algoritmo
    (4) codigo -> . algoritmo codigo
    (5) codigo -> . 
    (8) algoritmo -> . asignacion
    (9) algoritmo -> . declaracion
    (10) algoritmo -> . comparacion
    (11) algoritmo -> . condicionalIF
    (12) algoritmo -> . iteracionFOR
    (13) algoritmo -> . bucleWHILE
    (14) algoritmo -> . bucleDO_WHILE
    (15) algoritmo -> . indexacion
    (16) algoritmo -> . echo
    (17) algoritmo -> . terminar
    (18) asignacion -> . ambito multiVariable IGUAL expresion PTOCO
    (19) asignacion -> . multiVariable IGUAL expresion PTOCO
    (20) declaracion -> . ambito multiVariable PTOCO
    (21) declaracion -> . multiVariable PTOCO
    (28) comparacion -> . valor operadorC expresion PTOCO
    (29) comparacion -> . valor operadorM expresion PTOCO
    (30) comparacion -> . valor operadorL expresion PTOCO
    (73) condicionalIF -> . IF PIZQ condicion PDER LIZQ codigo LDER
    (74) condicionalIF -> . IF PIZQ condicion PDER LIZQ codigo LDER condicionalELSE
    (75) condicionalIF -> . IF PIZQ condicion PDER codigo
    (76) condicionalIF -> . IF PIZQ condicion PDER codigo condicionalELSE
    (81) iteracionFOR -> . FOR PIZQ asignacion condicion PTOCO adicion PDER codigo
    (82) iteracionFOR -> . FOR PIZQ asignacion condicion PTOCO adicion PDER LIZQ codigo LDER
    (83) bucleWHILE -> . WHILE PIZQ condicion PDER codigo
    (84) bucleWHILE -> . WHILE PIZQ condicion PDER LIZQ codigo LDER
    (85) bucleDO_WHILE -> . DO LIZQ codigo LDER WHILE PIZQ condicion PDER codigo
    (86) bucleDO_WHILE -> . DO LIZQ codigo LDER WHILE PIZQ condicion PDER LIZQ codigo LDER
    (87) indexacion -> . VARIABLE CIZQ INTEGER CDER
    (88) indexacion -> . VARIABLE CIZQ RESTA INTEGER CDER
    (89) indexacion -> . VARIABLE CIZQ INTEGER CDER FUSIONNULL
    (90) indexacion -> . VARIABLE CIZQ RESTA INTEGER CDER FUSIONNULL
    (91) echo -> . ECHO VARIABLE PTOCO
    (92) echo -> . ECHO expresion PTOCO
    (56) terminar -> . BREAK PTOCO
    (24) ambito -> . STATIC
    (25) ambito -> . VAR
    (26) ambito -> . GLOBAL
    (27) ambito -> . CONST
    (22) multiVariable -> . VARIABLE
    (23) multiVariable -> . VARIABLE COMA multiVariable
    (61) valor -> . INTEGER
    (62) valor -> . booleano
    (63) valor -> . STRING
    (64) valor -> . FLOAT
    (65) valor -> . VARIABLE
    (66) valor -> . BOOLEAN
    (67) booleano -> . TRUE
    (68) booleano -> . FALSE

  ! shift/reduce conflict for  resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for GLOBAL resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    FIN             reduce using rule 3 (codigo -> algoritmo .)
    LDER            reduce using rule 3 (codigo -> algoritmo .)
    ELSE            reduce using rule 3 (codigo -> algoritmo .)
    ELSEIF          reduce using rule 3 (codigo -> algoritmo .)
                    shift and go to state 7
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    DO              shift and go to state 25
    VARIABLE        shift and go to state 26
    ECHO            shift and go to state 28
    BREAK           shift and go to state 29
    STATIC          shift and go to state 30
    VAR             shift and go to state 31
    GLOBAL          shift and go to state 32
    CONST           shift and go to state 33
    INTEGER         shift and go to state 27
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    BOOLEAN         shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39

  !                 [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! IF              [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! FOR             [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! WHILE           [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! DO              [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! VARIABLE        [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! ECHO            [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! BREAK           [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! STATIC          [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! VAR             [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! GLOBAL          [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! CONST           [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! INTEGER         [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! STRING          [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! FLOAT           [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! BOOLEAN         [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! TRUE            [ reduce using rule 3 (codigo -> algoritmo .) ]
  ! FALSE           [ reduce using rule 3 (codigo -> algoritmo .) ]

    algoritmo                      shift and go to state 6
    codigo                         shift and go to state 41
    asignacion                     shift and go to state 9
    declaracion                    shift and go to state 10
    comparacion                    shift and go to state 11
    condicionalIF                  shift and go to state 12
    iteracionFOR                   shift and go to state 13
    bucleWHILE                     shift and go to state 14
    bucleDO_WHILE                  shift and go to state 15
    indexacion                     shift and go to state 16
    echo                           shift and go to state 17
    terminar                       shift and go to state 18
    ambito                         shift and go to state 19
    multiVariable                  shift and go to state 20
    valor                          shift and go to state 21
    booleano                       shift and go to state 34

state 7

    (5) codigo ->  .

    FIN             reduce using rule 5 (codigo ->  .)
    LDER            reduce using rule 5 (codigo ->  .)
    ELSE            reduce using rule 5 (codigo ->  .)
    ELSEIF          reduce using rule 5 (codigo ->  .)
                    reduce using rule 5 (codigo ->  .)
    IF              reduce using rule 5 (codigo ->  .)
    FOR             reduce using rule 5 (codigo ->  .)
    WHILE           reduce using rule 5 (codigo ->  .)
    DO              reduce using rule 5 (codigo ->  .)
    VARIABLE        reduce using rule 5 (codigo ->  .)
    ECHO            reduce using rule 5 (codigo ->  .)
    BREAK           reduce using rule 5 (codigo ->  .)
    STATIC          reduce using rule 5 (codigo ->  .)
    VAR             reduce using rule 5 (codigo ->  .)
    GLOBAL          reduce using rule 5 (codigo ->  .)
    CONST           reduce using rule 5 (codigo ->  .)
    INTEGER         reduce using rule 5 (codigo ->  .)
    STRING          reduce using rule 5 (codigo ->  .)
    FLOAT           reduce using rule 5 (codigo ->  .)
    BOOLEAN         reduce using rule 5 (codigo ->  .)
    TRUE            reduce using rule 5 (codigo ->  .)
    FALSE           reduce using rule 5 (codigo ->  .)


state 8

    (7) fin -> FIN .

    $end            reduce using rule 7 (fin -> FIN .)


state 9

    (8) algoritmo -> asignacion .

                    reduce using rule 8 (algoritmo -> asignacion .)
    IF              reduce using rule 8 (algoritmo -> asignacion .)
    FOR             reduce using rule 8 (algoritmo -> asignacion .)
    WHILE           reduce using rule 8 (algoritmo -> asignacion .)
    DO              reduce using rule 8 (algoritmo -> asignacion .)
    VARIABLE        reduce using rule 8 (algoritmo -> asignacion .)
    ECHO            reduce using rule 8 (algoritmo -> asignacion .)
    BREAK           reduce using rule 8 (algoritmo -> asignacion .)
    STATIC          reduce using rule 8 (algoritmo -> asignacion .)
    VAR             reduce using rule 8 (algoritmo -> asignacion .)
    GLOBAL          reduce using rule 8 (algoritmo -> asignacion .)
    CONST           reduce using rule 8 (algoritmo -> asignacion .)
    INTEGER         reduce using rule 8 (algoritmo -> asignacion .)
    STRING          reduce using rule 8 (algoritmo -> asignacion .)
    FLOAT           reduce using rule 8 (algoritmo -> asignacion .)
    BOOLEAN         reduce using rule 8 (algoritmo -> asignacion .)
    TRUE            reduce using rule 8 (algoritmo -> asignacion .)
    FALSE           reduce using rule 8 (algoritmo -> asignacion .)
    FIN             reduce using rule 8 (algoritmo -> asignacion .)
    LDER            reduce using rule 8 (algoritmo -> asignacion .)
    ELSE            reduce using rule 8 (algoritmo -> asignacion .)
    ELSEIF          reduce using rule 8 (algoritmo -> asignacion .)


state 10

    (9) algoritmo -> declaracion .

                    reduce using rule 9 (algoritmo -> declaracion .)
    IF              reduce using rule 9 (algoritmo -> declaracion .)
    FOR             reduce using rule 9 (algoritmo -> declaracion .)
    WHILE           reduce using rule 9 (algoritmo -> declaracion .)
    DO              reduce using rule 9 (algoritmo -> declaracion .)
    VARIABLE        reduce using rule 9 (algoritmo -> declaracion .)
    ECHO            reduce using rule 9 (algoritmo -> declaracion .)
    BREAK           reduce using rule 9 (algoritmo -> declaracion .)
    STATIC          reduce using rule 9 (algoritmo -> declaracion .)
    VAR             reduce using rule 9 (algoritmo -> declaracion .)
    GLOBAL          reduce using rule 9 (algoritmo -> declaracion .)
    CONST           reduce using rule 9 (algoritmo -> declaracion .)
    INTEGER         reduce using rule 9 (algoritmo -> declaracion .)
    STRING          reduce using rule 9 (algoritmo -> declaracion .)
    FLOAT           reduce using rule 9 (algoritmo -> declaracion .)
    BOOLEAN         reduce using rule 9 (algoritmo -> declaracion .)
    TRUE            reduce using rule 9 (algoritmo -> declaracion .)
    FALSE           reduce using rule 9 (algoritmo -> declaracion .)
    FIN             reduce using rule 9 (algoritmo -> declaracion .)
    LDER            reduce using rule 9 (algoritmo -> declaracion .)
    ELSE            reduce using rule 9 (algoritmo -> declaracion .)
    ELSEIF          reduce using rule 9 (algoritmo -> declaracion .)


state 11

    (10) algoritmo -> comparacion .
